--- a/Android Control Test/nbproject/project.properties
+++ b/Android Control Test/nbproject/project.properties
@@ -1,7 +1,11 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
-assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh\.xml,**/*.skeleton\.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
+assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh.xml,**/*.skeleton.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
 assets.folder.name=assets
 assets.compress=true
 build.classes.dir=${build.dir}/classes
@@ -27,16 +31,18 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.tonegod.gui.jar=../../AppData/Roaming/.jmonkeyplatform/3.0/libs/tonegod.gui.jar
+file.reference.tonegod.gui.jar-1=..\\..\\..\\..\\AppData\\Roaming\\.jmonkeyplatform\\3.0\\libs\\tonegod.gui.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
-    ${file.reference.tonegod.gui.jar}
+    ${file.reference.tonegod.gui.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -62,6 +68,7 @@ jnlp.signed=false
 main.class=mygame.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
